feat: add Manage Profile button

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,7 @@
                 <a class="nav-link dropdown-toggle" href="#" id="profile-name" data-toggle="dropdown"
                    aria-haspopup="true" aria-expanded="false"></a>
                 <div class="dropdown-menu" aria-labelledby="profile-name">
+                    <a class="dropdown-item" href="/user/manage" >Manage Profile</a>
                     <a class="dropdown-item" href="#" onclick="logout()">Sign Out</a>
                 </div>
             </li>
