--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
     <title>Train Ticket</title>
-    <meta name="description" content=""/>
-    <meta name="viewport" content="width=device-width"/>
+    <meta content="" name="description"/>
+    <meta content="width=device-width" name="viewport"/>
     <base href="/"/>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css"/>
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" rel="stylesheet"/>
+    <link href="/css/style.css" rel="stylesheet"/>
 </head>
 <body>
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="#">Train Ticket</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault"
-            aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+    <button aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler"
+            data-target="#navbarsExampleDefault" data-toggle="collapse" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -30,15 +30,15 @@
         </ul>
         <ul class="navbar-nav ml-auto">
             <li class="ml-auto nav-item authenticated dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="profile-name" data-toggle="dropdown"
-                   aria-haspopup="true" aria-expanded="false"></a>
-                <div class="dropdown-menu" aria-labelledby="profile-name">
-                    <a class="dropdown-item" href="/user/manage" >Manage Profile</a>
+                <a aria-expanded="false" aria-haspopup="true" class="nav-link dropdown-toggle" data-toggle="dropdown"
+                   href="#" id="profile-name"></a>
+                <div aria-labelledby="profile-name" class="dropdown-menu">
+                    <a class="dropdown-item" href="/user/manage">Manage Profile</a>
                     <a class="dropdown-item" href="#" onclick="logout()">Sign Out</a>
                 </div>
             </li>
             <li class="ml-auto nav-item unauthenticated">
-                <a class="nav-link" href="#" data-toggle="modal" data-target="#signInModal">Sign In</a>
+                <a class="nav-link" data-target="#signInModal" data-toggle="modal" href="#">Sign In</a>
             </li>
         </ul>
     </div>
@@ -51,7 +51,7 @@
             <p>This is a template for a simple marketing or informational website. It includes a large callout called a
                 jumbotron and three supporting pieces of content. Use it as a starting point to create something more
                 unique.</p>
-            <a role="button" class="btn btn-primary btn-lg" href="#">Learn More</a>
+            <a class="btn btn-primary btn-lg" href="/trips/search" role="button">Search</a>
         </div>
     </div>
 
@@ -81,12 +81,12 @@
         </div>
     </div>
 
-    <div class="modal fade" tabindex="-1" role="dialog" aria-hidden="true" id="signInModal">
+    <div aria-hidden="true" class="modal fade" id="signInModal" role="dialog" tabindex="-1">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLongTitle">Sign In</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -104,9 +104,10 @@
     </div>
 </main>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.js"></script>
-<script type="text/javascript" src="/js/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.js" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.js"
+        type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.2.1/js.cookie.js" type="text/javascript"></script>
+<script src="/js/script.js" type="text/javascript"></script>
 </body>
 </html>
